feat: 예외처리 추가 #1